# Smart-Meeting-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  run_backend.sh  run_test.sh
backend/: __init__.py  main.py  utils.py
backend/api/: __init__.py  routes.py
backend/core/: __init__.py  config.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  action_items_service.py  asr_service.py  diarization_service.py  llm_client.py  meeting_pipeline.py  prompt_service.py  sentiment_service.py  summarization_service.py  translation_service.py
datasets/smart_meeting_benchmark_v1/: README.md  audio_manifest.json  dataset_action_items.json  dataset_sentiment_engagement.json  dataset_summarization.json  dataset_translation_multilingual.json
frontend/: index.html
sample_data/: eval_dataset.json  sample_meeting_output.json  sample_meeting_transcript.txt  sample_meeting_zh.txt
scripts/: evaluate.py  generate_meeting_audio.py
test_assets/generated_audio/: three_person_meeting_transcript.txt
tests/: test_api.py  test_services.py
